--- a/src/web.config
+++ b/src/web.config
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<system.webServer>
-
-  <rewrite>
-    <rules>
-      <rule name="Angular Routes" stopProcessing="true">
-        <match url=".*" />
-        <conditions logicalGrouping="MatchAll">
-          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-          <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-        </conditions>
-        <action type="Rewrite" url="./index.html" appendQueryString="true" />
-      </rule>
-    </rules>
-  </rewrite>
-        <httpProtocol>
-            <customHeaders>
-                <add name="Access-Control-Allow-Origin" value="*" />
-            </customHeaders>
-        </httpProtocol>
-
-</system.webServer>
+    <system.webServer>
+         <rewrite>
+            <rules>
+              <rule name="AngularJS Routes" stopProcessing="true">
+                <match url=".*" />
+                <conditions logicalGrouping="MatchAll">
+                  <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                  <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                </conditions>
+                <action type="Rewrite" url="/" />
+              </rule>
+            </rules>
+          </rewrite>
+          <caching enabled="true" enableKernelCache="true">
+              <profiles>
+                  <add extension=".js" policy="DisableCache" kernelCachePolicy="DisableCache" />
+              </profiles>
+          </caching>
+    </system.webServer>
 </configuration>
