--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/webguud.config.json",
+              "src/routes.json",
               "src/assets/ExoRegular.ttf",
               "src/assets/VerveineRegular.ttf"
             ],
