--- a/angular.json
+++ b/angular.json
@@ -5,10 +5,9 @@
   "projects": {
     "guud": {
       "i18n": {
-        "sourceLocale": "en-US",
+        "sourceLocale": "en",
         "locales": {
-          "es": "src/assets/locale/aot/messages.es.xlf",
-          "en": "src/assets/locale/aot/messages.xlf"
+          "es": "src/assets/locale/aot/messages.es.xlf"
         }
       },
       "projectType": "application",
@@ -24,9 +23,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
-            "localize": ["en-US"],
             "outputPath": "dist",
+            "deleteOutputPath": false, 
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -57,8 +55,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "4mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -75,8 +73,8 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
-              "optimization": false,
+              "buildOptimizer": true,
+              "optimization": true,
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
