--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --localize --aot",
+    "build": "npm run build.loc && npm run build.main",
+    "build.loc": "ng build --localize",
+    "build.main": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
