--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run build.loc && npm run build.main",
+    "build": "ng build",
+    "build.azure": "npm run build.loc && npm run build.main",
     "build.loc": "ng build --localize",
     "build.main": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -20,8 +21,6 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.2",
     "jsonpack": "^1.1.5",
