Optimizaciones - Mejoras en manejo de rutas para multilenguaje - Scripts personalziados para localizar y armar preojecto para azure

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run build.loc && npm run build.main",
-    "build.loc": "ng build --localize",
-    "build.main": "ng build",
+
+    "build": "ng build --localize && npm run build.reloacate && npm run build.clean",
+    "build.reloacate": "xcopy /e /h \"dist/en\" \"dist\"",
+    "build.clean": "rmdir /s /q \"dist/en/\"",
+
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
