--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "build": "ng build && ng build --localize",
 
-    "build": "ng build --localize && npm run build.reloacate && npm run build.clean",
+    "build.custom": "ng build --localize && npm run build.reloacate && npm run build.clean",
     "build.reloacate": "xcopy /e /h \"dist/en\" \"dist\"",
     "build.clean": "rmdir /s /q \"dist/en/\"",
 
