--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "target": "es2020",
     "module": "es2020",
     "strictPropertyInitialization": false,
+    "types": ["jquery"],
     "lib": [
       "es2020",
       "dom"
