--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/TerminoYCondiciones.pdf",
               "src/routes.json"
             ],
             "styles": [
