--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.2.0",
     "jquery": "^3.6.2",
     "jsonpack": "^1.1.5",
     "path-browserify": "^1.0.1",
