--- a/angular.json
+++ b/angular.json
@@ -4,18 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "guud": {
-      "i18n": {
-        "sourceLocale": "en",
-        "locales": {
-          "es": "src/assets/locale/messages.es.xlf"
-        }
-      },
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -47,8 +36,7 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
+              "budgets": [{
                   "type": "initial",
                   "maximumWarning": "4mb",
                   "maximumError": "5mb"
@@ -59,12 +47,10 @@
                   "maximumError": "7kb"
                 }
               ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "outputHashing": "all"
             },
             "development": {
@@ -114,7 +100,18 @@
             "scripts": []
           }
         }
-      }
+      },
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "es": "src/assets/locale/messages.es.xlf"
+        }
+      },
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
     }
   },
   "cli": {
